cf_analysis_results/checkerframework_3.42.0_results/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8.txt
../dataset/june2020_dataset/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/framework/TestbedTest.java:411: error: (required.method.not.called) $$ 4 $$ method close $$ fos $$ java.io.FileOutputStream $$ possible exceptional exit due to result.writeTo(fos) with exception type java.io.FileNotFoundException $$ ( 10898, 10957 ) $$ @MustCall method close may not have been invoked on fos or any of its aliases.
      FileOutputStream fos = new FileOutputStream(getFilename());
                       ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to result.writeTo(fos) with exception type java.io.FileNotFoundException
../dataset/june2020_dataset/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/framework/TestbedTest.java:435: error: (required.method.not.called) $$ 4 $$ method close $$ fis $$ java.io.FileInputStream $$ possible exceptional exit due to deserializer.deserializeWorld(fis) with exception type java.io.FileNotFoundException $$ ( 11684, 11741 ) $$ @MustCall method close may not have been invoked on fis or any of its aliases.
      FileInputStream fis = new FileInputStream(getFilename());
                      ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to deserializer.deserializeWorld(fis) with exception type java.io.FileNotFoundException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
